Ensure the scrollbar width hacking works cross-browser, make margin calc DRYer

--- a/src/genomes/list/styles.css
+++ b/src/genomes/list/styles.css
@@ -3,7 +3,7 @@
 }
 
 .wgsa-genome-list-item {
-  /*height: 100%;*/
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -56,6 +56,11 @@
   position: relative;
 }
 
+.wgsa-list-wrapper {
+  display: flex;
+  width: 100%;
+}
+
 .wgsa-genome-list-header {
   font-weight: 500;
   padding-bottom: 4px;
@@ -63,8 +68,12 @@
   max-height: 20px;
 }
 
+.wgsa-list-wrapper > :first-child {
+  flex-grow: 1;
+}
+
 .wgsa-genome-list-header button,
-.wgsa-genome-list-header > * {
+.wgsa-list-header-cell {
   align-items: center;
   border: none;
   background: none;
